# model/user.go
@@ -3,8 +3,8 @@ package model
 // user model本体
 type User struct {
 	Id       int    `json:"id"`
-	Username string `json:"username" binding:"required,gt=2,lt=10"`
-	Password string `json:"password" binding:"required"`
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
 
 func (User) TableName() string {
